# turtle_beach_model_automata

./: README.md  pyproject.toml  requirements.txt
configs/: delray_demo.yaml
data/: README_DATA.md  delray_beach_profile_demo.csv  delray_nests_demo.csv  delray_sqm_mean.csv  observed_coordinates_template.csv  observed_tracks_template.csv  obstacles_demo.csv
docs/: Artigo_Reestruturado_Modelo_Calibrado_Praia.docx  FIELD_DATA_PROTOCOL.md  MODEL_SPECIFICATION.md
outputs_demo/: behavior_validation.json  calibration.json  light_validation.json  light_validation_residuals.csv  synthetic_observed_tracks.csv  synthetic_validation_tracks.csv
outputs_demo/experiments/: run_metrics.csv  sample_tracks.csv  scenario_summary.csv  turtle_results.csv
outputs_demo/sensitivity/: sensitivity_samples.csv  sensitivity_spearman.csv
scripts/: generate_article.py  run_delray_demo.bat  run_delray_demo.sh
tests/: test_model.py
turtle_beach_model/: __init__.py  agents.py  calibration.py  cli.py  config.py  environment.py  experiments.py  metrics.py  movement.py  observations.py  plots.py  processes.py  sensitivity.py  simulation.py  validation.py
