[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turtle-beach-model"
version = "0.2.0"
description = "Modelo espacial estocastico calibravel para orientacao de filhotes de tartarugas marinhas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "python-docx>=1.1"
]

[project.scripts]
turtle-beach = "turtle_beach_model.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["turtle_beach_model*"]
